syntax = "proto3";

package users_service;

option go_package = "compiled-protobuf/user-service";

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc ChangeUsername(ChangeUsernameRequest) returns (ChangeUsernameResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse) {}
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {}
  rpc GetActiveEmails(GetActiveEmailsRequest) returns (GetActiveEmailsResponse) {}
  rpc ChangePhoneNumber(ChangePhoneNumberRequest) returns (ChangePhoneNumberResponse) {}
  rpc VerifyPhoneNumber(VerifyPhoneNumberRequest) returns (VerifyPhoneNumberResponse) {}
  rpc GetActivePhoneNumbers(GetActivePhoneNumbersRequest) returns (GetActivePhoneNumbersResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message SignUpRequest {
  string email = 1;
  string hashed_password = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string phone_number = 6;
  optional google.protobuf.Timestamp birth_date = 7;
}

message SignUpResponse {
  uint32 code = 1;
  string message = 2;
}

message UpdateProfileRequest {
  optional string first_name = 1;
  optional string last_name = 2;
  optional string address = 3;
  optional google.protobuf.Timestamp birth_date = 4;
}

message UpdateProfileResponse {
  uint32 code = 1;
  string message = 2;
}

message ChangeUsernameRequest {
  string username = 1;
}

message ChangeUsernameResponse {
  uint32 code = 1;
  string message = 2;
}

message ChangePasswordRequest {
  string old_hashed_password = 1;
  string new_hashed_password = 2;
}

message ChangePasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message ChangeEmailRequest {
  string email = 1;
}

message ChangeEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message GetActiveEmailsRequest {}

message GetActiveEmailsResponse {
  uint32 code = 1;
  string message = 2;
  repeated string emails = 3;
}

message ChangePhoneNumberRequest {
  string phone_number = 1;
}

message ChangePhoneNumberResponse {
  uint32 code = 1;
  string message = 2;
}

message VerifyPhoneNumberRequest {
  string token = 1;
}

message VerifyPhoneNumberResponse {
  uint32 code = 1;
  string message = 2;
}

message GetActivePhoneNumbersRequest {}

message GetActivePhoneNumbersResponse {
  uint32 code = 1;
  string message = 2;
  repeated string phone_numbers = 3;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_hashed_password = 2;
}

message ResetPasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message DeleteUserRequest {
  string hashed_password = 1;
}

message DeleteUserResponse {
  uint32 code = 1;
  string message = 2;
}